--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Habib's Website is Not Coming</title>
+  <title>Habib's Website is Coming soon hurry</title>
   <style>
     :root{
       --bg1: #0f172a;
